--- a/experiences.html
+++ b/experiences.html
@@ -97,6 +97,21 @@
             });
         }
 
+        var labels = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        var locations = [
+          {lat: 40.785091, lng: -73.968285}  
+        ];
+        var markers = locations.map (function(location, i) {
+            return new google.maps.Marker ({
+                position: location,
+                label: labels[i % labels.length]
+            });
+        });
+        new MarkerClusterer(map, markers, {
+    imagePath:
+      "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m",
+  });
+
     </script>
    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2MYEN6Wiu0EQWZZLFiEU8vapXw5fcDgo&callback=initMap"></script>
