--- a/experiences.html
+++ b/experiences.html
@@ -24,10 +24,10 @@
 
         <div class="collapse navbar-collapse text-right" id="navbar">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="experiences.html">Experiences</a>
                 </li>
                 <li class="nav-item">
@@ -55,49 +55,96 @@
          </div>
 
 
-<!--Start of Membership Options Section-->
-        <div class="container">
-          <div class="row">
-            <div class="col-sm">
-              <h3>Tokyo</h3>
-              <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-              </ul>
+<div>
+        <div class="col-12">
+            <h3 class="heading-facilities">Facilities</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 facilities">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="assets/images/tokyo.jpg" alt="Photo of Weights Rack" />
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="row-3"><i class="fa fa-dumbbell"></i> Weights</h3>
+                        <p class="row-3">We have a wide variety of weight equipment:</p>
+                        <ul>
+                            <li>Free & Machine Weights</li>
+                            <li>Weight Benches</li>
+                            <li>Olympic Lifting Bars</li>
+                            <li>Lifting Platforms</li>
+                            <li>Power Racks</li>
+                            <li>Resistance Equipment</li>
+                        </ul>
+                        <hr />
+                    </div>
+                </div>
             </div>
-            <div class="col-sm">
-              <h3>Kyoto</h3>
-              <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-              </ul>
+
+            <div class="col-md-6 facilities">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="assets/images/kyoto   .jpg" alt="Photo of Woman Stretching" />
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="row-3"><i class="fas fa-spa"></i> Pilates</h3>
+                        <p class="row-3">
+                            We have a purpose built pilates area with floor space, free mats/equipment and lessons each
+                            week.
+                        </p>
+                        <hr />
+                    </div>
+                </div>
             </div>
-            <div class="col-sm">
-              <h3>Hiroshima</h3>
-              <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-              </ul>
+
+            <div class="col-md-6 facilities">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="assets/images/hiroshima.jpg" alt="Photo of Workout Class" />
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="row-3">
+                            <i class="fas fa-running"></i> Workout Classes
+                        </h3>
+                        <p class="row-3">We offer free Group Workout classes throughout the week including the following
+                            options:</p>
+                        <ul>
+                            <li>Cardio</li>
+                            <li>Body Pump</li>
+                            <li>Pilates & Yoga</li>
+                            <li>Fitness Dance</li>
+                        </ul>
+                        <hr />
+                    </div>
+                </div>
             </div>
-               <div class="col-sm">
-              <h3>Osaka</h3>
-              <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-              </ul>
-              </div>
+
+            <div class="col-md-6 facilities">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="assets/images/sapporo.jpg" alt="Photo of Man Working with Exercise Machine" />
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="row-3">
+                            <i class="fas fa-heartbeat"></i> Exercise Machines
+                        </h3>
+                        <p class="row-3">State of the art exercise machines/warmup areas including the following:</p>
+                        <ul>
+                            <li>Stretching Zone</li>
+                            <li>Treadmills</li>
+                            <li>Rowers</li>
+                            <li>Steppers</li>
+                            <li>Ellipticals</li>
+                            <li>Bikes</li>
+                        </ul>
+                        <hr />
+                    </div>
+                </div>
             </div>
-          </div>
+        </div>
+    </div>
         <hr />
-    <!--End of Membership Options Section-->
    
 
 
