--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Roche Fitness</title>
+    <title>Visit Japan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -48,7 +48,7 @@
     <div class="hero-text text-center">
         <h1><span>Experience the wonders of Japan!</span></h1>
         <!--Button for Joining - index.html-->
-        <a class="btn btn-outline-dark btn-lg" href="queryform.html" target="_blank">Request Brochure</a>
+        <a class="btn btn-outline-dark btn-lg" href="enquiries.html" target="_blank">Request Brochure</a>
     </div>
 
     <div class="container-fluid padding">
@@ -88,7 +88,7 @@
                 <h3>Culture</h3>
                 <p>Enjoy traditional Japanese food and entertainment</p>
             </div>
-            <a class="btn btn-primary btn-lg joinusyes" href="#" role="button">What to Do in Japan</a>
+            <a class="btn btn-primary btn-lg joinusyes" href="experiences.html" role="button">What to Do in Japan</a>
         </div>
     </div>
 
