--- a/experiences.html
+++ b/experiences.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Roche Fitness</title>
+    <title>Visit Japan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 
-<body>
+<body class="background">
     <!-- Navigation Section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html"><img src="assets/images/japan.png" alt="Logo for Visit Japan" /></a>
@@ -38,13 +38,11 @@
     </nav>
     <!--End of Navigation-->
 
-<!--Start of Gym Info Page-->
-    <div class="row">
-      <div class="col-md-12">
-        <h1><i class="fas fa-map-marker-alt"></i> Places to Go & Things to Do in Japan</h1> 
+    <!--Start of Gym Info Page-->
+    <div>
+        <h1 class="display-1"><i class="fas fa-map-marker-alt"></i> Places to Go & Things to Do in Japan</h1>
         <hr>
-      </div>
-      </div>  
+    </div>
     <!--End of Gym Info Page-->
 
 
@@ -52,104 +50,57 @@
     <!--Map Section -->
 
     <div id="map">
-         </div>
+    </div>
 
-
-<div>
-        <div class="col-12">
-            <h3 class="heading-facilities">Facilities</h3>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6 facilities">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="assets/images/tokyo.jpg" alt="Photo of Weights Rack" />
-                    </div>
-                    <div class="col-md-6">
-                        <h3 class="row-3"><i class="fa fa-dumbbell"></i> Weights</h3>
-                        <p class="row-3">We have a wide variety of weight equipment:</p>
-                        <ul>
-                            <li>Free & Machine Weights</li>
-                            <li>Weight Benches</li>
-                            <li>Olympic Lifting Bars</li>
-                            <li>Lifting Platforms</li>
-                            <li>Power Racks</li>
-                            <li>Resistance Equipment</li>
-                        </ul>
-                        <hr />
-                    </div>
-                </div>
+    <!--Start of Membership Options Section-->
+    <div class="container">
+        <div class="row padding1">
+            <div class="col-sm new">
+                <h3>Tokyo</h3>
+                <ul>
+                    <li>Meiji Jingu Shrine</li>
+                    <li>Shinjuku Gyoen National Garden</li>
+                    <li>Tokyo National Museum</li>
+                    <li>Ueno Park</li>
+                </ul>
             </div>
-
-            <div class="col-md-6 facilities">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="assets/images/kyoto   .jpg" alt="Photo of Woman Stretching" />
-                    </div>
-                    <div class="col-md-6">
-                        <h3 class="row-3"><i class="fas fa-spa"></i> Pilates</h3>
-                        <p class="row-3">
-                            We have a purpose built pilates area with floor space, free mats/equipment and lessons each
-                            week.
-                        </p>
-                        <hr />
-                    </div>
-                </div>
+            <div class="col-sm new">
+                <h3>Kyoto</h3>
+                <ul>
+                    <li>Fushimi Inari-taisha Shrine</li>
+                    <li>Kinkakuji Temple</li>
+                    <li>Participate in a tea ceremony</li>
+                    <li>View of the city at the Kyoto Tower</li>
+                </ul>
             </div>
-
-            <div class="col-md-6 facilities">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="assets/images/hiroshima.jpg" alt="Photo of Workout Class" />
-                    </div>
-                    <div class="col-md-6">
-                        <h3 class="row-3">
-                            <i class="fas fa-running"></i> Workout Classes
-                        </h3>
-                        <p class="row-3">We offer free Group Workout classes throughout the week including the following
-                            options:</p>
-                        <ul>
-                            <li>Cardio</li>
-                            <li>Body Pump</li>
-                            <li>Pilates & Yoga</li>
-                            <li>Fitness Dance</li>
-                        </ul>
-                        <hr />
-                    </div>
-                </div>
+            <div class="col-sm new">
+                <h3>Osaka</h3>
+                <ul>
+                    <li>Learn history of Osaka Castle</li>
+                    <li>Universal Studios Japan</li>
+                    <li>Eat out in Dotonburi</li>
+                    <li>See the creatures at Osaka Aquarium</li>
+                </ul>
             </div>
-
-            <div class="col-md-6 facilities">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="assets/images/sapporo.jpg" alt="Photo of Man Working with Exercise Machine" />
-                    </div>
-                    <div class="col-md-6">
-                        <h3 class="row-3">
-                            <i class="fas fa-heartbeat"></i> Exercise Machines
-                        </h3>
-                        <p class="row-3">State of the art exercise machines/warmup areas including the following:</p>
-                        <ul>
-                            <li>Stretching Zone</li>
-                            <li>Treadmills</li>
-                            <li>Rowers</li>
-                            <li>Steppers</li>
-                            <li>Ellipticals</li>
-                            <li>Bikes</li>
-                        </ul>
-                        <hr />
-                    </div>
-                </div>
+            <div class="col-sm new">
+                <h3>Sapporo</h3>
+                <ul>
+                    <li>Relax in Odori Park</li>
+                    <li>See the Sapporo Clock Tower</li>
+                    <li>Tour the Ishiya Chocolate Factory</li>
+                    <li>Attend Sapporo Snow Festival</li>
+                </ul>
             </div>
         </div>
     </div>
-        <hr />
-   
 
 
 
-    
+    <!--End of Membership Options Section-->
+
+
+
+
     <!--Footer Section-->
     <footer class="footer footer-dark bg-dark">
         <div class="container-fluid">
@@ -181,8 +132,10 @@
         </div>
     </footer>
     <!--End of Footer Section-->
-   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2MYEN6Wiu0EQWZZLFiEU8vapXw5fcDgo&callback=initMap"></script>
+    <script
+        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2MYEN6Wiu0EQWZZLFiEU8vapXw5fcDgo&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
