--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a class="btn btn-outline-dark btn-lg" href="enquiries.html" target="_blank">Request Brochure</a>
     </div>
 
-    <div class="container-fluid padding">
+    <div class="container-fluid padding1">
         <div class="row welcome text-center">
             <div class="col-12">
                 <h1 class="display-4"><span>Unforgettable experiences and breathtaking moments</span>
@@ -71,8 +71,8 @@
         </div>
     </div>
 
-    <div class="container-fluid padding mainsection">
-        <div class="row text-center padding">
+    <div class="container-fluid padding1 mainsection">
+        <div class="row text-center padding1">
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <i class="fas fa-spa fonticon"></i>
                 <h3>Relaxation</h3>
