--- a/experiences.html
+++ b/experiences.html
@@ -12,9 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="shortcut icon" type="image/png" href="assets/images/optimized-favicon.png">
 </head>
 
-<body class="background">
+<body class="backgroundcolor">
     <!-- Navigation Section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html"><img src="assets/images/japan.png" alt="Logo for Visit Japan" /></a>
